refactor: rename server.php into files.php

--- a/apache.conf
+++ b/apache.conf
@@ -1,24 +1,24 @@
-<VirtualHost *:80>
-	ServerName webdav
+<VirtualHost *:8080>
+	ServerName webdav.club1.fr
 	ServerAdmin n.peugnet@free.fr
-	DocumentRoot /home/nicolas/Source/www/webdav-server
+	DocumentRoot /home/nicolas/www/webdav-server
 
-	<Directory /home/nicolas/Source/www/webdav-server>
+	<Directory /home/nicolas/www/webdav-server>
 		Options Indexes FollowSymLinks
 
 		AuthName "Compte CLUB1"
 		AuthType Basic
 		AuthBasicProvider ldap
-		AuthLDAPUrl ldap://club1.fr/ou=People,dc=club1,dc=fr?uid
+		AuthLDAPUrl ldap://localhost/ou=People,dc=club1,dc=fr?uid
 		Require valid-user
 	</Directory>
 
 	<Location "/files">
-		SetHandler "proxy:unix:/run/php/php7.4-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost/home/nicolas/Source/www/webdav-server/server.php"
+		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost/home/nicolas/www/webdav-server/files.php"
 	</location>
 
-	ErrorLog ${APACHE_LOG_DIR}/files_error.log
-	CustomLog ${APACHE_LOG_DIR}/files_access.log combined
+	ErrorLog ${APACHE_LOG_DIR}/webdav_error.log
+	CustomLog ${APACHE_LOG_DIR}/webdav_access.log combined
 
 </VirtualHost>
 
