feat: first add of calendars

--- a/fpm-pool.conf
+++ b/fpm-pool.conf
@@ -3,7 +3,7 @@
 user = nicolas
 group = nicolas
 
-listen = /run/php/php7.4-fpm.nicolas.sock
+listen = /run/php/php-fpm.nicolas.sock
 
 ; Set permissions for unix socket, if one is used. In Linux, read/write
 ; permissions must be set in order to allow connections from a web server.
