--- a/apache.conf
+++ b/apache.conf
@@ -3,19 +3,15 @@
 	ServerAdmin n.peugnet@free.fr
 	DocumentRoot /home/nicolas/www/webdav-server
 
-	<Directory /home/nicolas/www/webdav-server>
-		Options Indexes FollowSymLinks
-
+	<LocationMatch "^/(?<sitename>files|calendars)">
 		AuthName "Compte CLUB1"
 		AuthType Basic
 		AuthBasicProvider ldap
 		AuthLDAPUrl ldap://localhost/ou=People,dc=club1,dc=fr?uid
 		Require valid-user
-	</Directory>
 
-	<Location "/files">
-		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost/home/nicolas/www/webdav-server/files.php"
-	</location>
+		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost/home/nicolas/www/webdav-server/%{env:MATCH_SITENAME}.php"
+	</LocationMatch>
 
 	ErrorLog ${APACHE_LOG_DIR}/webdav_error.log
 	CustomLog ${APACHE_LOG_DIR}/webdav_access.log combined
