fix: index.html

--- a/apache.conf
+++ b/apache.conf
@@ -3,14 +3,18 @@
 	ServerAdmin n.peugnet@free.fr
 	DocumentRoot /home/nicolas/www/webdav-server
 
-	<LocationMatch "^/(?<sitename>files|calendars)">
+	<Files "index.html">
+		Require all granted
+	</Files>
+
+	<LocationMatch "^/(?<filename>files|calendars)">
 		AuthName "Compte CLUB1"
 		AuthType Basic
 		AuthBasicProvider ldap
 		AuthLDAPUrl ldap://localhost/ou=People,dc=club1,dc=fr?uid
 		Require valid-user
 
-		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost/home/nicolas/www/webdav-server/%{env:MATCH_SITENAME}.php"
+		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost/home/nicolas/www/webdav-server/%{env:MATCH_FILENAME}.php"
 	</LocationMatch>
 
 	ErrorLog ${APACHE_LOG_DIR}/webdav_error.log
