refactor: define path var in apache conf

--- a/apache.conf
+++ b/apache.conf
@@ -1,7 +1,9 @@
 <VirtualHost *:8080>
+	Define path /home/nicolas/www/webdav-server
 	ServerName webdav.club1.fr
 	ServerAdmin n.peugnet@free.fr
-	DocumentRoot /home/nicolas/www/webdav-server
+
+	DocumentRoot ${path}
 
 	<Location "/">
 		AuthName "Compte CLUB1"
@@ -10,7 +12,7 @@
 		AuthLDAPUrl ldap://localhost/ou=People,dc=club1,dc=fr?uid
 		Require valid-user
 
-		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost/home/nicolas/www/webdav-server/server.php"
+		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost${path}/server.php"
 	</Location>
 
 	ErrorLog ${APACHE_LOG_DIR}/webdav_error.log
