--- a/apache.conf
+++ b/apache.conf
@@ -12,6 +12,7 @@
 		AuthLDAPUrl ldap://localhost/ou=People,dc=club1,dc=fr?uid
 		Require valid-user
 
+		Header set Access-Control-Allow-Origin "*"
 		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost${path}/server.php"
 	</Location>
 
