fix: CORS in combinaison with http auth

--- a/apache.conf
+++ b/apache.conf
@@ -5,6 +5,15 @@
 
 	DocumentRoot ${path}
 
+	Header always set Access-Control-Allow-Origin "*"
+	Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, PROPFIND"
+	Header always set Access-Control-Allow-Credentials "true"
+	Header always set Access-Control-Allow-Headers "Authorization,DNT,User-Agent,Keep-Alive,Content-Type,accept,origin,depth,X-Requested-Within"
+
+	RewriteEngine On
+	RewriteCond %{REQUEST_METHOD} OPTIONS
+	RewriteRule ^(.*)$ $1 [R=200,L]
+
 	<Location "/">
 		AuthName "Compte CLUB1"
 		AuthType Basic
@@ -12,7 +21,6 @@
 		AuthLDAPUrl ldap://localhost/ou=People,dc=club1,dc=fr?uid
 		Require valid-user
 
-		Header set Access-Control-Allow-Origin "*"
 		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost${path}/server.php"
 	</Location>
 
