fix: postgre encoding + vhost OPTIONS 200 + php notice

--- a/apache.conf
+++ b/apache.conf
@@ -12,7 +12,7 @@
 
 	RewriteEngine On
 	RewriteCond %{REQUEST_METHOD} OPTIONS
-	RewriteRule ^(.*)$ $1 [R=200,L]
+	RewriteRule ^/files(.*)$ $1 [R=200,L]
 
 	<Location "/">
 		AuthName "Compte CLUB1"
