add more HTTM methods to cross-origin whitelist

--- a/apache.conf
+++ b/apache.conf
@@ -6,7 +6,7 @@
 	DocumentRoot ${path}
 
 	Header always set Access-Control-Allow-Origin "*"
-	Header always set Access-Control-Allow-Methods "POST, GET, PUT, DELETE, OPTIONS, PROPFIND, MKCOL"
+	Header always set Access-Control-Allow-Methods "POST, GET, PUT, DELETE, OPTIONS, PROPFIND, MKCOL, LOCK, UNLOCK"
 	Header always set Access-Control-Allow-Credentials "true"
 	Header always set Access-Control-Allow-Headers "Authorization,DNT,User-Agent,Keep-Alive,Content-Type,accept,origin,depth,X-Requested-Within"
 
