--- a/apache.conf
+++ b/apache.conf
@@ -8,7 +8,7 @@
 	Header always set Access-Control-Allow-Origin "*"
 	Header always set Access-Control-Allow-Methods "POST, GET, PUT, DELETE, OPTIONS, PROPFIND, MOVE, COPY, MKCOL, LOCK, UNLOCK"
 	Header always set Access-Control-Allow-Credentials "true"
-	Header always set Access-Control-Allow-Headers "Authorization,DNT,User-Agent,Keep-Alive,Content-Type,accept,origin,depth,X-Requested-Within"
+	Header always set Access-Control-Allow-Headers "Authorization,DNT,User-Agent,Keep-Alive,Content-Type,Accept,Destination,Origin,Depth,X-Requested-Within"
 
 	RewriteEngine On
 	RewriteCond %{REQUEST_METHOD} OPTIONS
