add some more headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,8 @@ server {
 			add_header access-control-allow-origin *;
 			add_header access-control-allow-methods GET,POST,PUT,DELETE,OPTIONS,PROPFIND,MOVE,COPY,MKCOL,LOCK,UNLOCK;
 			add_header access-control-allow-credentials true;
-			add_header access-control-allow-headers authorization,dnt,user-agent,keep-alive,content-type,accept,origin,depth;
+			add_header access-control-allow-headers authorization,dnt,user-agent,keep-alive,content-type,accept,origin,depth,destination;
+			add_header dav 1;
 			return 204;
 		}
 
