deps: upgrade sabre/dav
install via source to keep the example folder since it was removed from
the git archive since 4.1.4 (see <https://github.com/sabre-io/dav/commit/9b86761f189f9b0a59dcdb5845dbb86e776a1941>)

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,11 @@
             "name": "Nicolas Peugnet",
             "email": "n.peugnet@free.fr"
         }
-    ]
+    ],
+    "config": {
+        "preferred-install": {
+            "sabre/dav": "source",
+            "*": "dist"
+        }
+    }
 }
