--- a/apache.conf
+++ b/apache.conf
@@ -8,11 +8,15 @@
 	<Location "/">
 		AuthName "Compte CLUB1"
 		AuthType Basic
-		AuthBasicProvider ldap
+		AuthBasicProvider ldap anon
 		AuthLDAPUrl ldap://localhost/ou=People,dc=club1,dc=fr?uid
+		Anonymous anonymous
+		Anonymous_MustGiveEmail Off
 		Require valid-user
 
-		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost${path}/server.php"
+		SetEnv pool %{env:AUTHENTICATE_UID}
+		SetEnvIf AUTHENTICATE_UID "^" pool=www-data AUTHENTICATE_UID=anonymous
+		SetHandler "proxy:unix:/run/php/php-fpm.%{env:pool}.sock|fcgi://localhost${path}/server.php"
 	</Location>
 
 	ErrorLog ${APACHE_LOG_DIR}/webdav_error.log
