--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,9 @@ server {
 
 	client_max_body_size 1G;
 
+	rewrite ^/.well-known/caldav$ / redirect;
+	rewrite ^/.well-known/carddav$ / redirect;
+
 	location / {
 		add_header access-control-allow-origin * always;
 
@@ -17,7 +20,12 @@ server {
 			add_header access-control-allow-methods GET,POST,PUT,DELETE,OPTIONS,PROPFIND,MOVE,COPY,MKCOL,LOCK,UNLOCK;
 			add_header access-control-allow-credentials true;
 			add_header access-control-allow-headers authorization,dnt,user-agent,keep-alive,content-type,accept,origin,depth,destination;
-			add_header dav 1;
+			add_header dav 1,3,extended-mkcol,resource-sharing,access-control,calendarserver-principal-property-search,2,calendar-access,calendar-proxy,calendarserver-subscribed,calendar-auto-schedule,calendar-availability,calendarserver-sharing,addressbook;
+			add_header ms-author-via DAV;
+
+
+			# Tell client that this pre-flight info is valid for 1h
+			add_header access-control-max-age 3600;
 			return 204;
 		}
 
