--- a/nginx.conf
+++ b/nginx.conf
@@ -9,23 +9,32 @@ server {
 
 	client_max_body_size 1G;
 
+	# Client autodiscover using .well-known
 	rewrite ^/.well-known/caldav$ / redirect;
 	rewrite ^/.well-known/carddav$ / redirect;
 
 	location / {
-		add_header access-control-allow-origin * always;
+		# This header must be present in all responses
+		add_header access-control-allow-origin https://drive.club1.fr always;
 
+		# OPTIONS requests are specific.
+		# - preflight for cross-origin requests in web browsers (drive.club1.fr)
+		# - autodiscovery for CalDAV & CardDAV clients
 		if ($request_method = OPTIONS) {
-			add_header access-control-allow-origin *;
+			# CORS headers for drive.club1.fr
+			add_header access-control-allow-origin https://drive.club1.fr;
 			add_header access-control-allow-methods GET,POST,PUT,DELETE,OPTIONS,PROPFIND,MOVE,COPY,MKCOL,LOCK,UNLOCK;
 			add_header access-control-allow-credentials true;
 			add_header access-control-allow-headers authorization,dnt,user-agent,keep-alive,content-type,accept,origin,depth,destination;
+
+			# CardDAV & CalDAV autodiscovery headers
 			add_header dav 1,3,extended-mkcol,resource-sharing,access-control,calendarserver-principal-property-search,2,calendar-access,calendar-proxy,calendarserver-subscribed,calendar-auto-schedule,calendar-availability,calendarserver-sharing,addressbook;
 			add_header ms-author-via DAV;
 
-
-			# Tell client that this pre-flight info is valid for 1h
+			# Tell client that this preflight info is valid for 1h
 			add_header access-control-max-age 3600;
+
+			# Allways return OK as browsers do not use auth credentials on preflight
 			return 204;
 		}
 
