feat: only www-data can use db (hide credentials to others)
- separate fileserver from server
- separate dbstring from config
- add /files/ Location exception to apache conf
- make locks backend use file in users home instead of db

--- a/apache.conf
+++ b/apache.conf
@@ -14,9 +14,13 @@
 		Anonymous_MustGiveEmail Off
 		Require valid-user
 
-		SetEnv pool %{env:AUTHENTICATE_UID}
-		SetEnvIf AUTHENTICATE_UID "^" pool=www-data AUTHENTICATE_UID=anonymous
-		SetHandler "proxy:unix:/run/php/php-fpm.%{env:pool}.sock|fcgi://localhost${path}/server.php"
+		SetEnvIf AUTHENTICATE_UID "^" AUTHENTICATE_UID=anonymous
+		SetHandler "proxy:unix:/run/php/php-fpm.www-data.sock|fcgi://localhost${path}/server.php"
+	</Location>
+
+	<Location "/files/">
+		AuthBasicProvider ldap
+		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost${path}/fileserver.php"
 	</Location>
 
 	ErrorLog ${APACHE_LOG_DIR}/webdav_error.log
