fix: debug browser "go to parent" once more

--- a/apache.conf
+++ b/apache.conf
@@ -18,7 +18,7 @@
 		SetHandler "proxy:unix:/run/php/php-fpm.www-data.sock|fcgi://localhost${path}/server.php"
 	</Location>
 
-	<Location "/files/">
+	<Location "/files">
 		AuthBasicProvider ldap
 		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost${path}/fileserver.php"
 	</Location>
