fix: simplify nginx setup and make dav autodiscover headers passtrough

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,13 +13,13 @@ server {
 	rewrite ^/.well-known/caldav$ / redirect;
 	rewrite ^/.well-known/carddav$ / redirect;
 
-	location / {
+	include proxy_params;
+
+	location /files {
 		# This header must be present in all responses
 		add_header access-control-allow-origin https://drive.club1.fr always;
 
-		# OPTIONS requests are specific.
-		# - preflight for cross-origin requests in web browsers (drive.club1.fr)
-		# - autodiscovery for CalDAV & CardDAV clients
+		# OPTIONS requests are preflight for cross-origin requests in web browsers (drive.club1.fr)
 		if ($request_method = OPTIONS) {
 			# CORS headers for drive.club1.fr
 			add_header access-control-allow-origin https://drive.club1.fr;
@@ -27,18 +27,19 @@ server {
 			add_header access-control-allow-credentials true;
 			add_header access-control-allow-headers authorization,dnt,user-agent,keep-alive,content-type,accept,origin,depth,destination;
 
-			# CardDAV & CalDAV autodiscovery headers
-			add_header dav 1,3,extended-mkcol,resource-sharing,access-control,calendarserver-principal-property-search,2,calendar-access,calendar-proxy,calendarserver-subscribed,calendar-auto-schedule,calendar-availability,calendarserver-sharing,addressbook;
-			add_header ms-author-via DAV;
-
 			# Tell client that this preflight info is valid for 100h
 			add_header access-control-max-age 360000;
+
+			# DAV header
+			add_header dav 1,2,3;
 
 			# Allways return OK as browsers do not use auth credentials on preflight
 			return 204;
 		}
+		proxy_pass http://localhost:8080;
+	}
 
-		include proxy_params;
+	location / {
 		proxy_pass http://localhost:8080;
 	}
 }
