fix: allow CORS from any origin

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,12 +17,12 @@ server {
 
 	location /files {
 		# This header must be present in all responses
-		add_header access-control-allow-origin https://drive.club1.fr always;
+		add_header access-control-allow-origin * always;
 
 		# OPTIONS requests are preflight for cross-origin requests in web browsers (drive.club1.fr)
 		if ($request_method = OPTIONS) {
-			# CORS headers for drive.club1.fr
-			add_header access-control-allow-origin https://drive.club1.fr;
+			# CORS headers for JS frontend
+			add_header access-control-allow-origin *;
 			add_header access-control-allow-methods GET,POST,PUT,DELETE,OPTIONS,PROPFIND,MOVE,COPY,MKCOL,LOCK,UNLOCK;
 			add_header access-control-allow-credentials true;
 			add_header access-control-allow-headers authorization,dnt,user-agent,keep-alive,content-type,accept,origin,depth,destination;
