clean: use composer autoloading for all classes
+ some Makefile improvements and comments

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,11 @@
             "email": "n.peugnet@free.fr"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "": ""
+        }
+    },
     "config": {
         "preferred-install": {
             "sabre/dav": "source",
