feat: fake nextcloud redirects

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,14 @@ server {
 	rewrite ^/.well-known/caldav$ / redirect;
 	rewrite ^/.well-known/carddav$ / redirect;
 
+	# Fake NextCloud for Gnome-online-accounts
+	rewrite ^/remote.php/carddav / redirect;
+	rewrite ^/remote.php/caldav / redirect;
+	location /remote.php/webdav {
+		return 200;
+	}
+
+
 	include proxy_params;
 
 	location /files {
