update apavhe and nginx conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,9 +16,10 @@ server {
 	# Fake NextCloud for Gnome-online-accounts
 	rewrite ^/remote.php/carddav / redirect;
 	rewrite ^/remote.php/caldav / redirect;
-	location /remote.php/webdav {
-		return 200;
-	}
+	rewrite ^/remote.php/webdav / redirect;
+	#rewrite ^/remote.php/carddav/?(.*)$ /$1 redirect;
+	#rewrite ^/remote.php/caldav/?(.*)$ /$1 redirect;
+	#rewrite ^/remote.php/webdav/?(.*)$ /$1 redirect;
 
 
 	include proxy_params;
@@ -44,10 +45,10 @@ server {
 			# Allways return OK as browsers do not use auth credentials on preflight
 			return 204;
 		}
-		proxy_pass http://localhost:8080;
+		proxy_pass http://127.0.0.1:8080;
 	}
 
 	location / {
-		proxy_pass http://localhost:8080;
+		proxy_pass http://127.0.0.1:8080;
 	}
 }
