--- a/apache.conf
+++ b/apache.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:8080>
-	Define path /home/nicolas/www/webdav-server
+	Define path /var/www/webdav-server
 	ServerName webdav.club1.fr
 	ServerAdmin n.peugnet@free.fr
 
-	DocumentRoot ${path}
+	DocumentRoot /var/www/html
 
 	<Location "/">
 		AuthName "Compte CLUB1"
