feat: move logs into its own files

--- a/nginx.conf
+++ b/nginx.conf
@@ -51,4 +51,7 @@ server {
 	location / {
 		proxy_pass http://127.0.0.1:8080;
 	}
+
+	access_log /var/log/nginx/webdav_access.log;
+	error_log /var/log/nginx/webdav_error.log;
 }
