fix: override open_basedir to fix webdav server

--- a/apache.conf
+++ b/apache.conf
@@ -20,6 +20,7 @@
 
 	<Location "/files">
 		AuthBasicProvider ldap
+		ProxyFCGISetEnvIf "true" PHP_ADMIN_VALUE "open_basedir=/"
 		SetHandler "proxy:unix:/run/php/php-fpm.%{env:AUTHENTICATE_UID}.sock|fcgi://localhost${path}/fileserver.php"
 	</Location>
 
