fix: use new webmaster@club1.fr alias

--- a/apache.conf
+++ b/apache.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:8080>
 	Define path /var/www/webdav-server
 	ServerName webdav.club1.fr
-	ServerAdmin n.peugnet@free.fr
+	ServerAdmin webmaster@club1.fr
 
 	DocumentRoot /var/www/html
 
