Add missing supported capabilities and methods
In Nginx CORS preflight bypass block

--- a/nginx.conf
+++ b/nginx.conf
@@ -32,7 +32,7 @@ server {
 		if ($request_method = OPTIONS) {
 			# CORS headers for JS frontend
 			add_header access-control-allow-origin *;
-			add_header access-control-allow-methods GET,POST,PUT,DELETE,OPTIONS,PROPFIND,MOVE,COPY,MKCOL,LOCK,UNLOCK;
+			add_header access-control-allow-methods GET,POST,PUT,DELETE,OPTIONS,PROPFIND,PROPPATCH,MOVE,COPY,MKCOL,LOCK,UNLOCK;
 			add_header access-control-allow-credentials true;
 			add_header access-control-allow-headers authorization,dnt,user-agent,keep-alive,content-type,accept,origin,depth,destination;
 
@@ -40,7 +40,7 @@ server {
 			add_header access-control-max-age 360000;
 
 			# DAV header
-			add_header dav 1,2,3;
+			add_header dav 1,2,3,extended-mkcol;
 
 			# Allways return OK as browsers do not use auth credentials on preflight
 			return 204;
